syntax = "proto3";

package marketdata;

enum Period{
  PERIOD_CURRENT = 0;
  PERIOD_M1      = 1;
  PERIOD_M2      = 2;
  PERIOD_M3      = 3;
  PERIOD_M4      = 4;
  PERIOD_M5      = 5;
  PERIOD_M6      = 6;
  PERIOD_M10     = 7;
  PERIOD_M12     = 8;
  PERIOD_M15     = 9;
  PERIOD_M20     = 10;
  PERIOD_M30     = 11;
  PERIOD_H1      = 12;
  PERIOD_H2      = 13;
  PERIOD_H3      = 14;
  PERIOD_H4      = 15;
  PERIOD_H5      = 16;
  PERIOD_H6      = 17;
  PERIOD_H7      = 18;
  PERIOD_H8      = 19;
  PERIOD_H12     = 20;
  PERIOD_D1      = 21;
  PERIOD_W1      = 22;
  PERIOD_MN1     = 23;
};

enum CandleType{
  VOLUME   = 0;
  TRADE    = 2;
  BOOK     = 3;
};

enum OrderSide{
  BUY  = 0;
  SELL = 1;
};

enum Venue{
  DARKPOOL    =  0;
  COINBASEPRO =  1;
  BINANCE     =  2;
  BITFINEX    =  3;
  BITMEX      =  4;
  GEMINI      =  5;
 }
 
 enum VenueType{
   SPOT    = 0;
   FUTURES = 1;
 };
 
 enum Symbol{
   USD   = 0;
   BTC   = 1;
   ETH   = 2;
   BCH   = 3;
   LTC   = 4;
   EOS   = 5;
   USDT  = 6;
 }
 
 enum Product{
   BTC_USD = 0;
   BTC_ETH = 1;
   ETH_USD = 2;
   LTC_USD = 3;
   LTC_BTC = 4;
   LTC_ETH = 5;
   BCH_USD = 6;
   BCH_BTC = 7;
   BCH_ETH = 8;
 }
 

message Item {
  double amount = 1;
  double price  = 2;
};

message Orderbook {
  Product           product     = 1;
  uint64            timestamp   = 2;
  uint32            levels      = 3;
  repeated Item     asks        = 4;
  repeated Item     bids        = 5;
  VenueType         venue_type  = 6;
};

message Candle {
  Product     product     = 1;
  Period      period      = 2;
  double      open        = 3;
  double      high        = 4;
  double      low         = 5;
  double      close       = 6;
  double      volume      = 7;
  CandleType  candle_type = 8;
  VenueType   venue_type  = 9;
};

message Trade {
  Product     product       = 1;
  uint64      timestamp     = 2;
  double      price         = 3;
  double      size          = 4;
  OrderSide   order_side    = 5;
  VenueType   venue_type    = 6;
};

message Ticker {
  Product     product       = 1;
  uint64      timestamp     = 2;
  double      price         = 3;
  OrderSide   order_side    = 4;
  double      best_bid      = 5;
  double      best_ask      = 6;
  VenueType   venue_type    = 7;
};
